<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical"
    tools:context=".UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/user_icon" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/username_hint"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/account_hint"
                    android:textColor="#808080"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/next" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout style="@style/FormMainLayoutStyle">

            <TextView
                style="@style/Register_LeftTextView"
                android:text="@string/sex" />

            <TextView
                android:id="@+id/user_sex"
                style="@style/Register_RightEditText"
                android:text="@string/sex" />

        </LinearLayout>

        <LinearLayout style="@style/FormMainLayoutStyle">

            <TextView
                style="@style/Register_LeftTextView"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/user_phone"
                style="@style/Register_RightEditText"
                android:text="@string/phone_hint" />

        </LinearLayout>

        <LinearLayout style="@style/FormMainLayoutStyle">

            <TextView
                style="@style/Register_LeftTextView"
                android:text="@string/major" />

            <TextView
                android:id="@+id/user_major"
                style="@style/Register_RightEditText"
                android:text="@string/major_hint" />
        </LinearLayout>

        <LinearLayout style="@style/FormMainLayoutStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/idc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/idc_hint"
                android:maxLines="10"
                android:minHeight="60dp"
                android:scrollbars="vertical" />
        </LinearLayout>
    </LinearLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="140dp"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:orientation="vertical">-->

    <!--<Button-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="40dp"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:background="@color/primary"-->
    <!--android:gravity="center"-->
    <!--android:text="设置"-->
    <!--android:textSize="20sp" />-->
    <!--</LinearLayout>-->
</LinearLayout>