<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomGroup" />

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            style="@style/rg_btn_style"
            android:checked="true"
            android:drawableTop="@drawable/rb_cp_selector"
            android:text="@string/rb_cp" />

        <RadioButton
            android:id="@+id/radioFunc"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/rb_team_selector"
            android:text="@string/rb_team" />

        <RadioButton
            android:id="@+id/radioSetting"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/rb_user_selector"
            android:text="@string/rb_user" />
    </RadioGroup>


</RelativeLayout>